lowered the image and raised the circle to ensure the select circle does not overlap over album cover for Spotify TOS, also fixed Spotify SVG do help fix overflow

--- a/frontend/src/components/PlaylistCard.css
+++ b/frontend/src/components/PlaylistCard.css
@@ -2,6 +2,7 @@
     position: relative;
     flex: 1 1 150px; /* Grow to fill space but maintain a minimum width of 200px */
     max-width: 150px; /* Prevent the card from becoming too large */
+    height: 232px;
     /*margin-left: auto; !* Pushes cards to balance spacing *!*/
     /*margin-right: auto; !* Keeps cards evenly spaced within rows *!*/
     display: flex;
@@ -24,7 +25,7 @@
 
 .selection-circle {
     position: absolute;
-    top: 0.5rem;
+    top: 0.3rem;
     right: 0.5rem;
     width: 20px;
     height: 20px;
@@ -57,7 +58,8 @@
     width: 100%;
     height: auto;
     border-radius: 8px;
-    margin-bottom: 1rem;
+    margin-top: 0.8rem;
+    margin-bottom: 0.5rem;
     object-fit: cover;
 }
 
